[tool.poetry]
name = "hide-secrets-in-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
commonmark = "^0.9.1"
Pillow = "^8.4.0"
pycryptodome = "^3.11.0"
pyfiglet = "^0.8.post1"
rich = "^10.15.1"
termcolor = "^1.1.0"
types-typing-extensions = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
